<resources>
    <string name="app_name">TEST_application2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="TARIFF_INFO">Информация о тарифе</string>
    <string name="CHECK_BOX">Есть сушилка</string>
    <string name="water">Вода</string>
    <string name="tariff_to_hot_water">Тариф на горячую воду</string>
    <string name="tariff_to_cold_water">Тариф на холодную воду</string>
    <string name="_30_65">30,65</string>
</resources>
