<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.postal.test_application.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_info_hot_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TARIFF_INFO"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_info_cold_water"
        android:text="@string/TARIFF_INFO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info_hot_water"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/check_drying"
        android:text="@string/CHECK_BOX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info_cold_water"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_tariff_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignTop="@+id/np_water"
        android:layout_alignParentLeft="true"
        android:text="30,66" />

    <TextView
        android:id="@+id/tv_hot_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignTop="@+id/np_water"
        android:layout_toLeftOf="@id/np_water"
        android:layout_marginRight="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/tv_tariff_hot_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textIsSelectable="false"
        android:layout_below="@+id/tv_tariff_hot"
        android:text="@string/tariff_to_hot_water"
        android:layout_alignLeft="@+id/tv_tariff_hot"
        android:layout_alignRight="@+id/tv_tariff_hot"
        tools:ignore="RtlHardcoded" />
    <!--розмещяем элемент textView_tariff_hot_water по ширине text_view_tariff_hot-->
    <!--android:layout_alignLeft="@+id/text_view_tariff_hot"-->
    <!--android:layout_alignRight="@+id/text_view_tariff_hot"-->

    <TextView
        android:id="@+id/tv_tariff_cold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignBottom="@+id/np_water"
        android:layout_alignParentLeft="true"
        android:text="@string/_30_65" />

    <TextView
        android:id="@+id/tv_cold_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignBottom="@+id/np_water"
        android:layout_toLeftOf="@id/np_water"
        android:layout_marginRight="20dp"
        android:text="0" />

    <TextView
        android:id="@+id/tv_tariff_cold_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tariff_cold"
        android:layout_alignLeft="@+id/tv_tariff_cold"
        android:layout_alignRight="@+id/tv_tariff_cold"
        android:textSize="16sp"
        android:textIsSelectable="false"
        android:layout_alignParentLeft="true"
        android:text="@string/tariff_to_cold_water"
        tools:ignore="RtlHardcoded" />

    <NumberPicker
        android:id="@+id/np_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/check_drying"
        android:layout_alignParentRight="true" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onClick"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tariff_cold_water"
        android:layout_toRightOf="@+id/tv_tariff_cold_water"
        android:layout_centerHorizontal="true"
        android:text="Summa"
        android:textSize="40dp"/>

</RelativeLayout>
